# logic-options

./: .gitignore  README.md  eval.py  eval_dist_to_joey.py  eval_random.py  logger.py  main.py  option_critic.py  param_schedule.py  play.py  play_multilevel.py  play_sb3.py  play_scobi.py  pyproject.toml  requirements.txt  run_multilevel.py  run_scobi.py  run_scobi_ppo.py  test.py  train.py  train_continue.py  train_ppo.py  utils.py
NUDGE/: .gitignore
ScoBots/: pyproject.toml
ScoBots/scobi/: concepts.py  core.py  focus.py
config/: config.yaml  scobi.yaml
config/examples/: cartpole.yaml  seaquest.yaml
in/components/: elevator.pkl  entrance.pkl  target.pkl
in/config/: config.yaml  rl-zoo-default.yaml  scobi.yaml
in/debug/: kangaroo_ill_def_OLD.yaml  kangaroo_ill_def_new.yaml  logic_flat.yaml  logic_flat_seaquest.yaml  logic_hierarchy.yaml  logic_hierarchy_seaquest.yaml  logic_hierarchy_seaquest_reward_mixing.yaml  logic_pretrained.yaml  logic_pretrained_terminator.yaml  neural_flat.yaml  neural_flat_kangaroo.yaml  neural_flat_kangaroo_hack.yaml  neural_flat_meeting.yaml  neural_flat_pong_hack.yaml  neural_flat_seaq_hack.yaml  neural_hierarchy.yaml  neural_hierarchy_reward_mixing.yaml  neural_hierarchy_seaquest.yaml  neural_pretrained_seaquest.yaml  neural_pretrained_terminator.yaml  seaquest_default_ppo.yaml  seaquest_logic_pretrained_terminator.yaml
in/focusfiles/: kangaroo.yaml  (+1 more)
src/: agent.py  callbacks.py  common.py  logger.py  option.py  option_critic.py  option_critic_policy.py  options_hierarchy.py  options_ppo.py  options_rollout_buffer.py  utils.py
(+94 files in other folders)
